# actions-auditor

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
actions_auditor/: __init__.py  cli.py  models.py  remediation.py  reporter.py  rules.py  scanner.py
tests/: __init__.py  test_models.py  test_remediation.py  test_reporter.py  test_rules.py  test_scanner.py
tests/fixtures/: bad_workflow.yml  good_workflow.yml
