[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "actions-auditor"
version = "0.1.0"
description = "A CLI security tool that scans GitHub Actions workflow YAML files for common misconfigurations and vulnerabilities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "actions-auditor contributors" }
]
keywords = ["github-actions", "security", "audit", "ci-cd", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
actions-auditor = "actions_auditor.cli:main"

[project.urls]
Homepage = "https://github.com/example/actions-auditor"
Repository = "https://github.com/example/actions-auditor"
Issues = "https://github.com/example/actions-auditor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["actions_auditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["actions_auditor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
